feat: add notification message api (#54)
