# proto/siren.swagger.yaml
@@ -261,6 +261,26 @@ paths:
             $ref: '#/definitions/PostNotificationRequest'
       tags:
         - Notification
+  /v1beta1/notifications/{notification_id}/messages:
+    get:
+      summary: List messages generated by notification
+      operationId: SirenService_ListNotificationMessages
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/ListNotificationMessagesResponse'
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/Status'
+      parameters:
+        - name: notification_id
+          in: path
+          required: true
+          type: string
+      tags:
+        - Notification
   /v1beta1/providers:
     get:
       summary: list providers
@@ -1155,6 +1175,14 @@ definitions:
         items:
           type: object
           $ref: '#/definitions/Namespace'
+  ListNotificationMessagesResponse:
+    type: object
+    properties:
+      messages:
+        type: array
+        items:
+          type: object
+          $ref: '#/definitions/NotificationMessage'
   ListProvidersResponse:
     type: object
     properties:
@@ -1222,6 +1250,38 @@ definitions:
         type: object
         additionalProperties:
           type: string
+      created_at:
+        type: string
+        format: date-time
+      updated_at:
+        type: string
+        format: date-time
+  NotificationMessage:
+    type: object
+    properties:
+      id:
+        type: string
+      notification_id:
+        type: string
+      status:
+        type: string
+      receiver_type:
+        type: string
+      details:
+        type: object
+      last_error:
+        type: string
+      max_tries:
+        type: string
+        format: uint64
+      try_count:
+        type: string
+        format: uint64
+      retryable:
+        type: boolean
+      expired_at:
+        type: string
+        format: date-time
       created_at:
         type: string
         format: date-time
